# k-means-constrained

./: .bumpversion.cfg  README.md  requirements.txt  setup.cfg
k_means_constrained/: __init__.py  joblib_multiprocessing_detector.py  k_means_constrained_.py
k_means_constrained/sklearn_import/cluster/: k_means_.py
k_means_constrained/sklearn_import/metrics/: pairwise.py
k_means_constrained/sklearn_import/preprocessing/: data.py
k_means_constrained/sklearn_import/utils/: extmath.py  sparsefuncs.py  sparsefuncs_fast.pyx  validation.py
tests/: test_k_means_constrained_.py
