[metadata]
name = k-means-constrained
version = 0.7.310
description = K-Means clustering constrained with minimum and maximum cluster size
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause
author = Josh Levy-Kramer
url = https://github.com/GoWizi/k-means-constrained
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Scientific/Engineering
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
zip_safe = False
python_requires = >=3.8
; Currently includes the venv `k-means-env` directory. Can't work out how to exclude it
; Dont try. Its a HUGE RABAT HOLE
packages = find:

